Writting to the flash works. Need to finish the rotation of memory pages in the funcs ChooseReadFlashBank and WriteBufferToFlash. Fix the initial value of WRTN field.

--- a/Projects/NUCLEO-L476RG/Applications/LoRaWAN/LoRaWAN_End_Node/Core/Src/settings.json
+++ b/Projects/NUCLEO-L476RG/Applications/LoRaWAN/LoRaWAN_End_Node/Core/Src/settings.json
@@ -64,3 +64,105 @@
  "Command": "read settings" 
 }  
 
+{
+        "LoRa_settings": {
+                "DEVEUI": 0x11101011010,
+                "APPKEY": 0x1b6c162386,
+                "FREQ": 86800000,
+                "FR": 129374907
+        },
+        "UART3": true,
+        "LED2": {
+                "USB": {
+                        "sec": 10,
+                        "min": 2,
+                        "hour": 0,
+                        "days": 0,
+                        "work": true
+                },
+                "battery": {
+                        "sec": 0,
+                        "min": 3,
+                        "hour": 0,
+                        "days": 0,
+                        "work": true
+                }
+        },
+        "LED1": {
+                "USB": {
+                        "blinks":{
+                                "msec": 100,
+                                "times": 3
+                        },
+                        "period":{
+                                "sec": 1,
+                                "min": 2,
+                                "hour": 0,
+                                "days": 0,
+                                "work": false,
+                        },
+                },
+                "LoRa": {
+                        "blinks":{
+                                "msec": 200,
+                                "times": 2
+                        },
+                        "period":{
+                                "sec": 1,
+                                "min": 2,
+                                "hour": 0,
+                                "days": 0,
+                                "work": true
+                        },
+                }
+        },
+        "period_LoRa": {
+                "sec": 1,
+                "min": 2,
+                "hour": 0,
+                "days": 0,
+                "work": true
+        },
+        "LoRa_text": "Soon as early Dawn appeared, the rosy-fingered, up from his bed arose the dear son of Odysseus and put on his clothing.",
+        "LoRa_Data": [{"AD_1":true}, {"INP1":false}, {"INP3":false}, {"AD_4":true}, {"TEXT":false}],
+        "Command": "              ",
+        "WRTN": 153,
+        "DevEuiValid":true,
+        "AppKeyValid":true}
+
+
+
+{
+ "Command": "read settings"
+} 
+
+
+
+
+
+{
+        "LoRa_settings": { "FR": 55 }
+}
+{
+        "LED2": {
+                "USB": {
+                        "sec": 10,
+                        "min": 2,
+                        "hour": 0,
+                        "days": 0,
+                        "work": true
+				}
+		}
+}
+				
+
+0x20006660
+0x20006660
+
+
+
+
+
+
+
+
