--- a/Projects/NUCLEO-L476RG/Applications/LoRaWAN/LoRaWAN_End_Node/MDK-ARM/LoRaWAN_End_Node.uvprojx
+++ b/Projects/NUCLEO-L476RG/Applications/LoRaWAN/LoRaWAN_End_Node/MDK-ARM/LoRaWAN_End_Node.uvprojx
@@ -473,6 +473,21 @@
               <FileType>1</FileType>
               <FilePath>.\usart_transm.c</FilePath>
             </File>
+            <File>
+              <FileName>SettingsToHw.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\SettingsToHw.c</FilePath>
+            </File>
+            <File>
+              <FileName>sensors.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\sensors.c</FilePath>
+            </File>
+            <File>
+              <FileName>realiseSettings.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\realiseSettings.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -647,6 +662,21 @@
               <FileName>stm32l4xx_hal_pcd_ex.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_hal_pcd_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32l4xx_hal_adc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_hal_adc.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32l4xx_hal_adc_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_hal_adc_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32l4xx_ll_adc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_ll_adc.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -1404,6 +1434,21 @@
               <FileType>1</FileType>
               <FilePath>.\usart_transm.c</FilePath>
             </File>
+            <File>
+              <FileName>SettingsToHw.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\SettingsToHw.c</FilePath>
+            </File>
+            <File>
+              <FileName>sensors.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\sensors.c</FilePath>
+            </File>
+            <File>
+              <FileName>realiseSettings.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\realiseSettings.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1647,6 +1692,21 @@
               <FileName>stm32l4xx_hal_pcd_ex.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_hal_pcd_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32l4xx_hal_adc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_hal_adc.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32l4xx_hal_adc_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_hal_adc_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32l4xx_ll_adc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_ll_adc.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -2455,6 +2515,21 @@
               <FileType>1</FileType>
               <FilePath>.\usart_transm.c</FilePath>
             </File>
+            <File>
+              <FileName>SettingsToHw.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\SettingsToHw.c</FilePath>
+            </File>
+            <File>
+              <FileName>sensors.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\sensors.c</FilePath>
+            </File>
+            <File>
+              <FileName>realiseSettings.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\realiseSettings.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -2698,6 +2773,21 @@
               <FileName>stm32l4xx_hal_pcd_ex.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_hal_pcd_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32l4xx_hal_adc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_hal_adc.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32l4xx_hal_adc_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_hal_adc_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32l4xx_ll_adc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_ll_adc.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -3455,6 +3545,21 @@
               <FileType>1</FileType>
               <FilePath>.\usart_transm.c</FilePath>
             </File>
+            <File>
+              <FileName>SettingsToHw.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\SettingsToHw.c</FilePath>
+            </File>
+            <File>
+              <FileName>sensors.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\sensors.c</FilePath>
+            </File>
+            <File>
+              <FileName>realiseSettings.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\realiseSettings.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -3698,6 +3803,21 @@
               <FileName>stm32l4xx_hal_pcd_ex.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_hal_pcd_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32l4xx_hal_adc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_hal_adc.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32l4xx_hal_adc_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_hal_adc_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32l4xx_ll_adc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_ll_adc.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -4506,6 +4626,21 @@
               <FileType>1</FileType>
               <FilePath>.\usart_transm.c</FilePath>
             </File>
+            <File>
+              <FileName>SettingsToHw.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\SettingsToHw.c</FilePath>
+            </File>
+            <File>
+              <FileName>sensors.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\sensors.c</FilePath>
+            </File>
+            <File>
+              <FileName>realiseSettings.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\realiseSettings.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -4749,6 +4884,21 @@
               <FileName>stm32l4xx_hal_pcd_ex.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_hal_pcd_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32l4xx_hal_adc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_hal_adc.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32l4xx_hal_adc_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_hal_adc_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32l4xx_ll_adc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_ll_adc.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -5557,6 +5707,21 @@
               <FileType>1</FileType>
               <FilePath>.\usart_transm.c</FilePath>
             </File>
+            <File>
+              <FileName>SettingsToHw.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\SettingsToHw.c</FilePath>
+            </File>
+            <File>
+              <FileName>sensors.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\sensors.c</FilePath>
+            </File>
+            <File>
+              <FileName>realiseSettings.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\realiseSettings.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -5800,6 +5965,21 @@
               <FileName>stm32l4xx_hal_pcd_ex.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_hal_pcd_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32l4xx_hal_adc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_hal_adc.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32l4xx_hal_adc_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_hal_adc_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32l4xx_ll_adc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Drivers\STM32L4xx_HAL_Driver\Src\stm32l4xx_ll_adc.c</FilePath>
             </File>
           </Files>
         </Group>
