--- a/Projects/NUCLEO-L476RG/Applications/LoRaWAN/LoRaWAN_End_Node/MDK-ARM/LoRaWAN_End_Node.uvprojx
+++ b/Projects/NUCLEO-L476RG/Applications/LoRaWAN/LoRaWAN_End_Node/MDK-ARM/LoRaWAN_End_Node.uvprojx
@@ -469,16 +469,6 @@
               <FilePath>..\Core\Src\usart_if.c</FilePath>
             </File>
             <File>
-              <FileName>usart_transm.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\usart_transm.c</FilePath>
-            </File>
-            <File>
-              <FileName>SettingsToHw.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\SettingsToHw.c</FilePath>
-            </File>
-            <File>
               <FileName>realiseSettings.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\realiseSettings.c</FilePath>
@@ -487,6 +477,16 @@
               <FileName>sensors.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\sensors.c</FilePath>
+            </File>
+            <File>
+              <FileName>SettingsToHw.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\SettingsToHw.c</FilePath>
+            </File>
+            <File>
+              <FileName>usart_transm.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\usart_transm.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -874,11 +874,6 @@
               <FilePath>..\Core\Src\tiny-json.c</FilePath>
             </File>
             <File>
-              <FileName>fillBuff.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\fillBuff.c</FilePath>
-            </File>
-            <File>
               <FileName>tiny-json_extra.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\tiny-json_extra.c</FilePath>
@@ -889,9 +884,14 @@
               <FilePath>..\Core\Src\example01.c</FilePath>
             </File>
             <File>
+              <FileName>fillBuff.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\fillBuff.c</FilePath>
+            </File>
+            <File>
               <FileName>parseMessages.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\parseMessages.c</FilePath>
+              <FilePath>..\Core\Src\parseMessages.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -954,14 +954,14 @@
           <GroupName>Flash_Writting</GroupName>
           <Files>
             <File>
-              <FileName>flash_work.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\flash_work.c</FilePath>
-            </File>
-            <File>
               <FileName>flash_mem.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\flash_mem.c</FilePath>
+            </File>
+            <File>
+              <FileName>flash_work.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\flash_work.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -1430,16 +1430,6 @@
               <FilePath>..\Core\Src\usart_if.c</FilePath>
             </File>
             <File>
-              <FileName>usart_transm.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\usart_transm.c</FilePath>
-            </File>
-            <File>
-              <FileName>SettingsToHw.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\SettingsToHw.c</FilePath>
-            </File>
-            <File>
               <FileName>realiseSettings.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\realiseSettings.c</FilePath>
@@ -1448,6 +1438,16 @@
               <FileName>sensors.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\sensors.c</FilePath>
+            </File>
+            <File>
+              <FileName>SettingsToHw.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\SettingsToHw.c</FilePath>
+            </File>
+            <File>
+              <FileName>usart_transm.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\usart_transm.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -1955,11 +1955,6 @@
               <FilePath>..\Core\Src\tiny-json.c</FilePath>
             </File>
             <File>
-              <FileName>fillBuff.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\fillBuff.c</FilePath>
-            </File>
-            <File>
               <FileName>tiny-json_extra.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\tiny-json_extra.c</FilePath>
@@ -1970,9 +1965,14 @@
               <FilePath>..\Core\Src\example01.c</FilePath>
             </File>
             <File>
+              <FileName>fillBuff.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\fillBuff.c</FilePath>
+            </File>
+            <File>
               <FileName>parseMessages.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\parseMessages.c</FilePath>
+              <FilePath>..\Core\Src\parseMessages.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -2035,14 +2035,14 @@
           <GroupName>Flash_Writting</GroupName>
           <Files>
             <File>
-              <FileName>flash_work.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\flash_work.c</FilePath>
-            </File>
-            <File>
               <FileName>flash_mem.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\flash_mem.c</FilePath>
+            </File>
+            <File>
+              <FileName>flash_work.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\flash_work.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -2511,16 +2511,6 @@
               <FilePath>..\Core\Src\usart_if.c</FilePath>
             </File>
             <File>
-              <FileName>usart_transm.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\usart_transm.c</FilePath>
-            </File>
-            <File>
-              <FileName>SettingsToHw.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\SettingsToHw.c</FilePath>
-            </File>
-            <File>
               <FileName>realiseSettings.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\realiseSettings.c</FilePath>
@@ -2529,6 +2519,16 @@
               <FileName>sensors.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\sensors.c</FilePath>
+            </File>
+            <File>
+              <FileName>SettingsToHw.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\SettingsToHw.c</FilePath>
+            </File>
+            <File>
+              <FileName>usart_transm.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\usart_transm.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -2985,11 +2985,6 @@
               <FilePath>..\Core\Src\tiny-json.c</FilePath>
             </File>
             <File>
-              <FileName>fillBuff.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\fillBuff.c</FilePath>
-            </File>
-            <File>
               <FileName>tiny-json_extra.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\tiny-json_extra.c</FilePath>
@@ -3000,9 +2995,14 @@
               <FilePath>..\Core\Src\example01.c</FilePath>
             </File>
             <File>
+              <FileName>fillBuff.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\fillBuff.c</FilePath>
+            </File>
+            <File>
               <FileName>parseMessages.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\parseMessages.c</FilePath>
+              <FilePath>..\Core\Src\parseMessages.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -3065,14 +3065,14 @@
           <GroupName>Flash_Writting</GroupName>
           <Files>
             <File>
-              <FileName>flash_work.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\flash_work.c</FilePath>
-            </File>
-            <File>
               <FileName>flash_mem.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\flash_mem.c</FilePath>
+            </File>
+            <File>
+              <FileName>flash_work.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\flash_work.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -3541,16 +3541,6 @@
               <FilePath>..\Core\Src\usart_if.c</FilePath>
             </File>
             <File>
-              <FileName>usart_transm.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\usart_transm.c</FilePath>
-            </File>
-            <File>
-              <FileName>SettingsToHw.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\SettingsToHw.c</FilePath>
-            </File>
-            <File>
               <FileName>realiseSettings.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\realiseSettings.c</FilePath>
@@ -3559,6 +3549,16 @@
               <FileName>sensors.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\sensors.c</FilePath>
+            </File>
+            <File>
+              <FileName>SettingsToHw.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\SettingsToHw.c</FilePath>
+            </File>
+            <File>
+              <FileName>usart_transm.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\usart_transm.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -4066,11 +4066,6 @@
               <FilePath>..\Core\Src\tiny-json.c</FilePath>
             </File>
             <File>
-              <FileName>fillBuff.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\fillBuff.c</FilePath>
-            </File>
-            <File>
               <FileName>tiny-json_extra.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\tiny-json_extra.c</FilePath>
@@ -4081,9 +4076,14 @@
               <FilePath>..\Core\Src\example01.c</FilePath>
             </File>
             <File>
+              <FileName>fillBuff.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\fillBuff.c</FilePath>
+            </File>
+            <File>
               <FileName>parseMessages.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\parseMessages.c</FilePath>
+              <FilePath>..\Core\Src\parseMessages.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -4146,14 +4146,14 @@
           <GroupName>Flash_Writting</GroupName>
           <Files>
             <File>
-              <FileName>flash_work.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\flash_work.c</FilePath>
-            </File>
-            <File>
               <FileName>flash_mem.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\flash_mem.c</FilePath>
+            </File>
+            <File>
+              <FileName>flash_work.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\flash_work.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -4622,16 +4622,6 @@
               <FilePath>..\Core\Src\usart_if.c</FilePath>
             </File>
             <File>
-              <FileName>usart_transm.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\usart_transm.c</FilePath>
-            </File>
-            <File>
-              <FileName>SettingsToHw.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\SettingsToHw.c</FilePath>
-            </File>
-            <File>
               <FileName>realiseSettings.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\realiseSettings.c</FilePath>
@@ -4640,6 +4630,16 @@
               <FileName>sensors.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\sensors.c</FilePath>
+            </File>
+            <File>
+              <FileName>SettingsToHw.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\SettingsToHw.c</FilePath>
+            </File>
+            <File>
+              <FileName>usart_transm.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\usart_transm.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -5147,11 +5147,6 @@
               <FilePath>..\Core\Src\tiny-json.c</FilePath>
             </File>
             <File>
-              <FileName>fillBuff.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\fillBuff.c</FilePath>
-            </File>
-            <File>
               <FileName>tiny-json_extra.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\tiny-json_extra.c</FilePath>
@@ -5162,9 +5157,14 @@
               <FilePath>..\Core\Src\example01.c</FilePath>
             </File>
             <File>
+              <FileName>fillBuff.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\fillBuff.c</FilePath>
+            </File>
+            <File>
               <FileName>parseMessages.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\parseMessages.c</FilePath>
+              <FilePath>..\Core\Src\parseMessages.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -5227,14 +5227,14 @@
           <GroupName>Flash_Writting</GroupName>
           <Files>
             <File>
-              <FileName>flash_work.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\flash_work.c</FilePath>
-            </File>
-            <File>
               <FileName>flash_mem.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\flash_mem.c</FilePath>
+            </File>
+            <File>
+              <FileName>flash_work.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\flash_work.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -5703,16 +5703,6 @@
               <FilePath>..\Core\Src\usart_if.c</FilePath>
             </File>
             <File>
-              <FileName>usart_transm.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\usart_transm.c</FilePath>
-            </File>
-            <File>
-              <FileName>SettingsToHw.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\SettingsToHw.c</FilePath>
-            </File>
-            <File>
               <FileName>realiseSettings.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\realiseSettings.c</FilePath>
@@ -5721,6 +5711,16 @@
               <FileName>sensors.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\sensors.c</FilePath>
+            </File>
+            <File>
+              <FileName>SettingsToHw.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\SettingsToHw.c</FilePath>
+            </File>
+            <File>
+              <FileName>usart_transm.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\usart_transm.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -6228,11 +6228,6 @@
               <FilePath>..\Core\Src\tiny-json.c</FilePath>
             </File>
             <File>
-              <FileName>fillBuff.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\fillBuff.c</FilePath>
-            </File>
-            <File>
               <FileName>tiny-json_extra.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\tiny-json_extra.c</FilePath>
@@ -6243,9 +6238,14 @@
               <FilePath>..\Core\Src\example01.c</FilePath>
             </File>
             <File>
+              <FileName>fillBuff.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\fillBuff.c</FilePath>
+            </File>
+            <File>
               <FileName>parseMessages.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\parseMessages.c</FilePath>
+              <FilePath>..\Core\Src\parseMessages.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -6308,14 +6308,14 @@
           <GroupName>Flash_Writting</GroupName>
           <Files>
             <File>
-              <FileName>flash_work.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\flash_work.c</FilePath>
-            </File>
-            <File>
               <FileName>flash_mem.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\flash_mem.c</FilePath>
+            </File>
+            <File>
+              <FileName>flash_work.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\flash_work.c</FilePath>
             </File>
           </Files>
         </Group>
